# mhwcode

./: .gitignore  .glitch-assets  .hgignore  .toprc  .wget-hsts  AGENTS.md  Cargo.toml  DOLT_REMOTE.md  README.md  Readme.adoc  Readme.md  apt.py  bzr-svn-test.txt  manifest  package.json  ruff.toml  server.js  win-remote-reboot.ps1
.beads/: config.yaml  metadata.json
apt/: Notes.txt  Readme.md  a1.bat  a1.py  a2.bat  a2.py  a3-subs.bat  a3-subs.py  apt-docopt.bat  apt-docopt.py  apt-skeleton.bat  apt-skeleton.py  apt.bat  apt.py  args.py  clapt.py  complex.py  dapt.bat  dapt.py  grenoble-workbook.leo  set-root.bat  setup.py  shell-history.txt  test_thg_bug889
arcplus/: AttributedMultiRingBuffer.py  arcgisscripting.py  arcplus.py  autocrop.ClipNoData.pyt.xml  autocrop.pyt  autocrop.pyt.xml  report-versions.py  xx-calc-trans.py
gis/: AliasFeatureclassConversion.py  asSVG.py  bzr-svn-test.txt  get-fgdb-stats.py  list-fc-aliases.py  uninstall-ALL-ArcGIS-products.bat  xx-set-alias.py
metril/: .env.example  import_onenote_zip.py
notes/: scrabook.md
other/: OpenWithNotepad.reg  RelaunchElevated.cmd  RelaunchElevated_EmbeddedScripts.cmd  RemoveOpenWithNotepad.reg  add2shims.bat  aliases_doskey.txt  args.py  assoc-py.cmd  cmdline.bat  cmdline.py  create-leobat.bat  cyg-apt.py  dezoomify.rb  doskey-aliases.txt  doskey-reload.bat  extract-pdf-img.py  foobar.py  ftype-py-arc10.cmd  ftype-py-from-env.cmd  get-unc-path.bat  install-pip.py  remote-install-vnc.bat  time_cmd.py  (+10 more)
tools/zest/: Cargo.toml
tools/zest/src/: io.rs  main.rs  naming.rs
tools/zest/tests/: cli.rs
(+157 files in other folders)
