[package]
name = "zist"
version = "0.1.0"
edition = "2021"
description = "Format-agnostic in-place (de)compression wrappers. argv[0] dispatches zist/unzist."
license = "MIT"

[[bin]]
name = "zist"
path = "src/main.rs"

[lib]
name = "zist"
path = "src/lib.rs"

[dependencies]
zstd = { version = "0.13", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
xz2 = "0.1"
bzip2 = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
